2006-10-22  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/main-window.c:
	* src/fe-gnome/preferences-page-irc.c:
	* src/fe-gnome/preferences-page-colors.c:
	* src/fe-gnome/preferences-page-spellcheck.c:
	* src/fe-gnome/dcc-window.c:
	* data/Makefile.am:
	D data/stock_link.png:
	D data/users.png:
	D data/logout.png:
	D data/color.png:
	D data/stock_up.png:
	D data/notauthorized.png:
	D data/soap.png:
	D data/preferences-keybindings.png:
	D data/toilet-paper.png:
	D data/stock_down.png:
	D data/spellcheck.png:
	D data/irc.png:
	  - Get rid of a lot of the icons we're currently bundling, in favor
	    of theme-based ones.


2006-10-21  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/conversation-panel.c:
	* src/fe-gnome/topic-label.c:
	* src/fe-gnome/navigation-tree.c:
	  - Fix a few problems when closing the last server.  This prevents a
	    couple crashes, and resets the window title. (#363859)

2006-10-21  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/preferences-page-networks.c:
	  - Use weak references to the editor dialogs to repopulate the list
	    on the networks prefs page.  The way it was written before worked
	    fine when this editor was modal, but was broken now. (#363655)

2006-10-21  David Trowbridge  <trowbrds@gmail.com>

	* data/xchat-gnome.glade:
	  - Disable the "Users" button by default, since it will be enabled
	    when the first channel is joined, and it doesn't make sense when
	    not connected to anything. (#363651)

2006-10-21  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/irc-network-editor.c:
	* data/irc-network-editor.glade:
	  - Use "Close" and "Revert" buttons in network editor dialog
	    instead of "OK" and "Cancel" (#363658)

2006-10-21  David Trowbridge  <trowbrds@gmail.com>

	* data/xchat-gnome.glade:
	  - Change initial window title to include the words "IRC Client"
	    (#363649).

2006-10-18  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/xtext.c:
	* src/fe-gnome/xtext.h: